POST, GET's, UPDATE and DELETE methods implemented to Product
